<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_train_svgrepo_com"
            android:title="@string/menu_clicker" />

<!--        gallery-->
        <item
            android:id="@+id/nav_upgrades"
            android:icon="@drawable/ic_arrow_upward"
            android:title="@string/menu_upgrades" />

<!--        slideshow-->
        <item
            android:id="@+id/nav_train_shop"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/menu_train_shop" />

<!--        tools-->
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_subscriptions"
            android:title="@string/menu_coal_shop" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
